samples/_failures_safe/1761319918_7dc1d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f049ccb.c:161: error: expected ‘;’, ‘,’ or ‘)’ at end of input
